--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>RAIN</title>
+		<title>RAIN-2</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="robots" content="" />
